--- a/0209-atribuicao-e-ternario/index.html
+++ b/0209-atribuicao-e-ternario/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Variavel</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Atribuição e Ternário</title>
 </head>
 <body>
   <script src="script.js"></script>
